Paint word count chart

--- a/public/index.html
+++ b/public/index.html
@@ -63,11 +63,12 @@
         </div>
       </section>
     </main>
-    <div id="chart"></div>
+    <canvas id="wordCountChart" width="400" height="1200"></canvas>
     <footer id="footer">
       <span id="bottom--align">&copy; Best Site Ever</span>
     </footer>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.3.2/dist/chart.umd.min.js"></script>
     <script src="./common.js" type="text/javascript"></script>
     <script src="./index.js" type="text/javascript"></script>
   </body>
